Fixed horizontal scrolling issue in mobile

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 
 html,
 body {
-  max-width: 100%;
+  overflow-x: hidden;
   font-family: "Oswald", sans-serif !important;
   /* background: var(--beige) !important; */
   color: var(--mint) !important;
